Update issue 6226 Status: NeedsReview Vertical-align the sliders
svn path=/branches/issue-6226/; revision=3129

--- a/src/jquery/css/override-page.css
+++ b/src/jquery/css/override-page.css
@@ -56,4 +56,5 @@ span.ui-dialog-title {
 .ui-dialog input[type="range"] {
   outline: none;
   margin: 10px;
+  vertical-align: middle;
 }
